{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 53,
  "lineage": "7fa50fd6-04ad-c196-55b3-989c0844bf4a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "transitGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:sa-east-1:129762072419:transit-gateway/tgw-0da8c07cef39eb511",
            "association_default_route_table_id": "tgw-rtb-0a052dd162447ef97",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-0da8c07cef39eb511",
            "owner_id": "129762072419",
            "propagation_default_route_table_id": "tgw-rtb-0a052dd162447ef97",
            "tags": {
              "Name": "Web-backed transit gateway"
            },
            "tags_all": {
              "Name": "Web-backed transit gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment_for_vpc_app02_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-04463e460161783c1",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0f3c1c11e64c2ccd5"
            ],
            "tags": {
              "Name": "transit gateway attachment for vpc app02 "
            },
            "tags_all": {
              "Name": "transit gateway attachment for vpc app02 "
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0da8c07cef39eb511",
            "vpc_id": "vpc-04f0671a550f3eaf3",
            "vpc_owner_id": "129762072419"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transitGW",
            "aws_subnet.private-sa-east-1b",
            "aws_subnet.private-sa-east-1c",
            "aws_subnet.private02-sa-east-1c",
            "aws_vpc.app02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment_for_vpc_app03_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-08455535a538f258a",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0774d2f3fa3c8a774"
            ],
            "tags": {
              "Name": "transit gateway attachment for vpc app03"
            },
            "tags_all": {
              "Name": "transit gateway attachment for vpc app03"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0da8c07cef39eb511",
            "vpc_id": "vpc-0701d6c9b999b59d1",
            "vpc_owner_id": "129762072419"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transitGW",
            "aws_subnet.private-sa-east-1c",
            "aws_subnet.private-sa-east-1d",
            "aws_subnet.private03-sa-east-1c",
            "aws_vpc.app03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfa6ff183115f3e6",
            "association_id": "eipassoc-0ed7b198da23c93d8",
            "domain": "vpc",
            "id": "eipalloc-0dfa6ff183115f3e6",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0d3673b6354bb6d54",
            "private_dns": "ip-10-100-1-108.sa-east-1.compute.internal",
            "private_ip": "10.100.1.108",
            "public_dns": "ec2-15-229-224-133.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.229.224.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_for_app01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:internet-gateway/igw-0faa3dece486937bd",
            "id": "igw-0faa3dece486937bd",
            "owner_id": "129762072419",
            "tags": {
              "Name": "app01_IG",
              "Owner": "marvin",
              "Planet": "Area100-feedin",
              "Service": "application01"
            },
            "tags_all": {
              "Name": "app01_IG",
              "Owner": "marvin",
              "Planet": "Area100-feedin",
              "Service": "application01"
            },
            "vpc_id": "vpc-0b6dda6685cee169d"
          },
          "dependencies": [
            "aws_vpc.app01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfa6ff183115f3e6",
            "connectivity_type": "public",
            "id": "nat-0c82087465d685494",
            "network_interface_id": "eni-0d3673b6354bb6d54",
            "private_ip": "10.100.1.108",
            "public_ip": "15.229.224.133",
            "subnet_id": "subnet-0c39ab78bfdeb5890",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw_for_app01",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.app01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-017f0bfd638e4c3fa",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c82087465d685494",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0da8c07cef39eb511",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private for vpc app 02"
            },
            "tags_all": {
              "Name": "private for vpc app 02"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f0671a550f3eaf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.transitGW",
            "aws_eip.nat",
            "aws_internet_gateway.igw_for_app01",
            "aws_nat_gateway.nat",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.app01",
            "aws_vpc.app02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0461b6dbb009ccd60",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c82087465d685494",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0da8c07cef39eb511",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private for vpc app 03"
            },
            "tags_all": {
              "Name": "private for vpc app 03"
            },
            "timeouts": null,
            "vpc_id": "vpc-0701d6c9b999b59d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.transitGW",
            "aws_eip.nat",
            "aws_internet_gateway.igw_for_app01",
            "aws_nat_gateway.nat",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.app01",
            "aws_vpc.app03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:route-table/rtb-030fa6f29cd7843d4",
            "id": "rtb-030fa6f29cd7843d4",
            "owner_id": "129762072419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0faa3dece486937bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public for vpc app01 "
            },
            "tags_all": {
              "Name": "public for vpc app01 "
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6dda6685cee169d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_for_app01",
            "aws_vpc.app01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sa-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871c73561fd11d84",
            "route_table_id": "rtb-030fa6f29cd7843d4",
            "subnet_id": "subnet-0c39ab78bfdeb5890"
          },
          "dependencies": [
            "aws_internet_gateway.igw_for_app01",
            "aws_route_table.public",
            "aws_subnet.public-sa-east-1a",
            "aws_vpc.app01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sa-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:subnet/subnet-0f3c1c11e64c2ccd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.101.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3c1c11e64c2ccd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129762072419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sa-east-1b",
              "Owner": "marvin",
              "Planet": "Area101_private",
              "Service": "application01"
            },
            "tags_all": {
              "Name": "private-sa-east-1b",
              "Owner": "marvin",
              "Planet": "Area101_private",
              "Service": "application01"
            },
            "vpc_id": "vpc-04f0671a550f3eaf3"
          },
          "dependencies": [
            "aws_vpc.app01",
            "aws_vpc.app02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sa-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:subnet/subnet-0774d2f3fa3c8a774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.102.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0774d2f3fa3c8a774",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129762072419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sa-east-1c",
              "Owner": "Luke",
              "Planet": "Area102_private",
              "Service": "application01"
            },
            "tags_all": {
              "Name": "private-sa-east-1c",
              "Owner": "Luke",
              "Planet": "Area102_private",
              "Service": "application01"
            },
            "vpc_id": "vpc-0701d6c9b999b59d1"
          },
          "dependencies": [
            "aws_vpc.app02",
            "aws_vpc.app03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private02-sa-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:subnet/subnet-0c1de195f2654c58a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.101.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1de195f2654c58a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129762072419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sa-east-1c",
              "Owner": "marvin",
              "Planet": "Area101_private",
              "Service": "application02"
            },
            "tags_all": {
              "Name": "private-sa-east-1c",
              "Owner": "marvin",
              "Planet": "Area101_private",
              "Service": "application02"
            },
            "vpc_id": "vpc-04f0671a550f3eaf3"
          },
          "dependencies": [
            "aws_vpc.app02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private03-sa-east-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:subnet/subnet-0c051455bb793a3f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.102.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c051455bb793a3f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129762072419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sa-east-1c",
              "Owner": "Luke",
              "Planet": "Area102_private",
              "Service": "application03"
            },
            "tags_all": {
              "Name": "private-sa-east-1c",
              "Owner": "Luke",
              "Planet": "Area102_private",
              "Service": "application03"
            },
            "vpc_id": "vpc-0701d6c9b999b59d1"
          },
          "dependencies": [
            "aws_vpc.app03"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sa-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:subnet/subnet-0c39ab78bfdeb5890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c39ab78bfdeb5890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129762072419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-vpc-app01",
              "Owner": "marvin",
              "Planet": "Area100_public",
              "Service": "application01"
            },
            "tags_all": {
              "Name": "public-subnet-vpc-app01",
              "Owner": "marvin",
              "Planet": "Area100_public",
              "Service": "application01"
            },
            "vpc_id": "vpc-0b6dda6685cee169d"
          },
          "dependencies": [
            "aws_vpc.app01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:vpc/vpc-0b6dda6685cee169d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0d3b3ca1240d03d02",
            "default_route_table_id": "rtb-0f5a53364c5f31868",
            "default_security_group_id": "sg-0889fbae6268c87e5",
            "dhcp_options_id": "dopt-0ed07561f53c1fc3b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b6dda6685cee169d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5a53364c5f31868",
            "owner_id": "129762072419",
            "tags": {
              "Name": "app01",
              "Owner": "marvin",
              "Planet": "Area100",
              "Service": "application01"
            },
            "tags_all": {
              "Name": "app01",
              "Owner": "marvin",
              "Planet": "Area100",
              "Service": "application01"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:vpc/vpc-04f0671a550f3eaf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.101.0.0/16",
            "default_network_acl_id": "acl-0eecac5ea0362b5e1",
            "default_route_table_id": "rtb-05edd7f9412fb4988",
            "default_security_group_id": "sg-0c773e4c96b646a56",
            "dhcp_options_id": "dopt-0ed07561f53c1fc3b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04f0671a550f3eaf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05edd7f9412fb4988",
            "owner_id": "129762072419",
            "tags": {
              "Name": "app02",
              "Owner": "marvin",
              "Planet": "Area101",
              "Service": "application011"
            },
            "tags_all": {
              "Name": "app02",
              "Owner": "marvin",
              "Planet": "Area101",
              "Service": "application011"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:129762072419:vpc/vpc-0701d6c9b999b59d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.102.0.0/16",
            "default_network_acl_id": "acl-0884cd2fdefc09cea",
            "default_route_table_id": "rtb-0cc64bb1be666a3cc",
            "default_security_group_id": "sg-0950699ef1203f2f2",
            "dhcp_options_id": "dopt-0ed07561f53c1fc3b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0701d6c9b999b59d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc64bb1be666a3cc",
            "owner_id": "129762072419",
            "tags": {
              "Name": "app03",
              "Owner": "marvin",
              "Planet": "Area102",
              "Service": "application03"
            },
            "tags_all": {
              "Name": "app03",
              "Owner": "marvin",
              "Planet": "Area102",
              "Service": "application03"
            }
          }
        }
      ]
    }
  ]
}